[package]
name = "kd_tree"
version = "0.0.1"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
edition = "2018"
description = "k-dimensional tree implemented with const generics"
license = "MIT"
repository = "https://github.com/TianyiShi2001/kdtree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
ordered-float = "2.0.1"

[dev-dependencies]
kdtree = "0.6.0"
lazy_static = "1.4.0"
rand = "0.8.0"

